--- a/shared/latex/recommander-system/intro.tex
+++ b/shared/latex/recommander-system/intro.tex
@@ -31,7 +31,7 @@
   2 types de recommandation :
   \begin{itemize}
   \item Basée sur le contenu (content-based)
-  \item Basée sur l'utilisateur (user-based)
+  \item Basée sur l'utilisateur (filtrage collaboratif)
   \end{itemize}
 \end{frame}
 
