--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -26,6 +26,7 @@
 \usepackage{stmaryrd}
 \usepackage{caption}
 \usepackage{tikz}
+\usepackage{colortbl}
 \usepackage{lcg}
 \usepackage[french]{babel}
 
