--- a/shared/latex/programmation/theory.tex
+++ b/shared/latex/programmation/theory.tex
@@ -154,3 +154,15 @@
         \item [ETC ...]
     \end{description}
 \end{frame}
+
+\begin{frame}{L'indexation de Liste}
+    \V{["tikz/math/tensor1D", "tw", 1.0] | image}
+\end{frame}
+
+\begin{frame}{L'indexation de Matrice}
+    \V{["tikz/math/tensor2D", "tw", 1.0] | image}
+\end{frame}
+
+\begin{frame}{L'indexation de Tenseur 3D}
+    \V{["tikz/math/tensor3D", "tw", 1.0] | image}
+\end{frame}
