--- a/shared/latex/en/python/regexes/tp.tex
+++ b/shared/latex/en/python/regexes/tp.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \bluelink{https://colab.research.google.com/drive/1byfqmU5aVhs4Nc9bbWlvg-SdysBmkif9\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
