--- a/shared/latex/programmation/hardware.tex
+++ b/shared/latex/programmation/hardware.tex
@@ -31,5 +31,6 @@
 \end{frame}
 
 \begin{frame}{Synthèse des différentes mémoires}
-    \V{["img/memory-hierarchy", "th", 0.7] | image}
+    \V{["img/memory-hierarchy", "th", 0.5] | image}
+    Utile uniquement à garder en tête quand, on cherche à optimiser un programme !
 \end{frame}
