add chatgpt-hacking screenshot; link to orsys/tho/pdf ressource in orsys/tho/latex/about/ressources-orsys.tex

--- a/shared/latex/nn/chatgpt.tex
+++ b/shared/latex/nn/chatgpt.tex
@@ -102,7 +102,19 @@
   \end{itemize} 
 \end{frame}
 
-\begin{frame}{ChatGPT}
+\begin{frame}{Limites}
+  \V{["img/chatgpt-amazon-crawler-1", "th", 0.80] | image}
+\end{frame}
+
+\begin{frame}{Limites}
+  \V{["img/chatgpt-amazon-crawler-3", "th", 0.80] | image}
+\end{frame}
+
+\begin{frame}{Limites}
+  \V{["img/chatgpt-amazon-crawler-4", "th", 0.80] | image}
+\end{frame}
+
+\begin{frame}{Limites}
   Les mots ne sont pas attachés à des sons.
   \V{["img/chattejaipete-ducul", "tw", 0.85] | image}
 \end{frame}
