--- a/orsys/INTRA/2023-03-STMICRO/latex/about/description.tex
+++ b/orsys/INTRA/2023-03-STMICRO/latex/about/description.tex
@@ -25,7 +25,7 @@
   \begin{itemize}
   \item Introduction à la modélisation
   \item Evaluation de modèles prédictifs
-  \item Python pour le machine learing -- Tratement des données
+  \item Python pour le machine learing -- Traitement des données
   \item Algorithmes supervisés
   \item Algorithmes non-supervisés
   \item Deep learing
