--- a/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
@@ -15,6 +15,18 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Le changement de base}
+  \V{["tikz/math/3D-base-change", "th", 0.8] | image}
+\end{frame}
+
+\begin{frame}{Le changement de base}
+  \V{["tikz/math/3D-base-change-2", "th", 0.8] | image}
+\end{frame}
+
+\begin{frame}{Intérêt}
+  Suppression de la colinéarité de variables
+\end{frame}
+
 \begin{frame}{ACP --- Exemple 1}
   \V{["img/pca-nuage", "th", 0.7] | image}
 \end{frame}
