--- a/shared/latex/python/advanced/context-managers.tex
+++ b/shared/latex/python/advanced/context-managers.tex
@@ -37,7 +37,7 @@
 \end{frame}
 
 \begin{frame}{Contextes déjà implémentés}
-  Beaucoup d'objets possèdent habituellement les méthodes être utilisés en tant que contextes~:
+  Beaucoup d'objets possèdent les méthodes pour être utilisés en tant que contextes~:
   \begin{itemize}[<+->]
     \item Les fichiers
     \item Les sessions HTTP
