--- a/profind/pda/en/latex/en/about/description.tex
+++ b/profind/pda/en/latex/en/about/description.tex
@@ -1,22 +1,10 @@
 \begin{frame}{Description}
-  This training introduces the \textbf{fundamentals} of \textbf{statistical modeling} with a focus on hands-on practice.
+  This training introduces the \textbf{fundamentals} of \textbf{computer engineering} with a focus on \textbf{data analysis} via \textbf{Python language} hands-on practice.
 \end{frame}
 
 \begin{frame}{Prerequisites}
   \begin{itemize}
-  \item Basic knowledge of statistics and algebra
-  \item Basic knowledge of Python
+  \item Basic knowledge about computers
   \item A valid \textbf{Google account} to be able to do the labs on \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
-\end{frame}
-
-\begin{frame}{Objectives}
-  \begin{itemize}
-  \item Understand the principles of statistical modeling
-  \item Understand the different types of regressions
-  \item Evaluate the performances of a predictive algorithm
-  \item Select and classify data in a big data environment
-  \item Get familiar with the various scientific libraries in Python (NumPy, seaborn, scikit-learn, ... )
-  \end{itemize}
-  In short, learn the fundamentals of machine learning.
 \end{frame}
