--- a/shared/latex/en/python/advanced/comprehensions.tex
+++ b/shared/latex/en/python/advanced/comprehensions.tex
@@ -1,33 +1,33 @@
 \begin{frame}{Introduction}
   \begin{itemize}[<+->]
-    \item Mécanisme simple pour créer une nouvelle collection à partir d'une collection existante
-    \item Lisible et flexible
+    \item Simple mechanism to create a new collection from an existing one
+    \item Readable and flexible
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Syntaxe}
-  La syntaxe est \texttt{<resultat for element in collection\_originale if condition>}
+\begin{frame}{Syntax}
+  The syntax is \texttt{<result for element in original\_collection if condition>}
 
-  Reprend les symboles usuels des différentes structures de données~:
+  It uses the common symbols of different data structures:
 
   \begin{center}
     \begin{tabular}{ccc}
-      \textbf{Délimiteurs} & \textbf{Exemple} & \textbf{Type résultat} \\
+      \textbf{Delimiters} & \textbf{Example} & \textbf{Result Type} \\
       \toprule
-      \texttt{[]} & \texttt{[n * 2 for n in l]} & Liste \\
-      \texttt{\{\}} & \texttt{\{n * 2 for n in l\}} & Ensemble \\
-      \texttt{\{\}} & \texttt{\{n: n * 2 for n in l\}} & Dictionnaire \\
-      \texttt{()} & \texttt{(n * 2 for n in l)} & Générateur \\
+      \texttt{[]} & \texttt{[n * 2 for n in l]} & List \\
+      \texttt{\{\}} & \texttt{\{n * 2 for n in l\}} & Set \\
+      \texttt{\{\}} & \texttt{\{n: n * 2 for n in l\}} & Dictionary \\
+      \texttt{()} & \texttt{(n * 2 for n in l)} & Generator \\
     \end{tabular}
   \end{center}
 \end{frame}
 
-\begin{frame}{Équivalence}
-  Une compréhension correspond à une boucle \texttt{for}~:
+\begin{frame}{Equivalence}
+  A comprehension corresponds to a \texttt{for} loop:
 
   \mintedpycode{python/advanced/comprehensions/correspondence}
 \end{frame}
 
-\begin{frame}{Compréhensions imbriquées}
+\begin{frame}{Nested Comprehensions}
   \mintedpycode{python/advanced/comprehensions/nested}
 \end{frame}
