Add spark slides
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/bigdata/intro.tex
+++ b/shared/latex/python/bigdata/intro.tex
@@ -1,3 +1,22 @@
 \begin{frame}{Introduction}
-  
+  Les données volumineuses posent des problèmes particuliers
+
+  \begin{itemize}
+    \item Stockage impossible sur un seul nœud
+    \item De même pour le calcul
+    \item La programmation ditribuée est délicate
+  \end{itemize}
+
+  $\Rightarrow$ Nécessité d'utiliser des outils pertinents
+\end{frame}
+
+\begin{frame}{Historique}
+  Premiers patrons de traitement de données volumineuses inventés par Google il y a 20 ans
+
+  \begin{description}
+    \item[2004] MapReduce
+    \item[2006] Hadoop
+    \item[2014] Spark, Dask
+    \item[2020] Spark v3
+  \end{description}
 \end{frame}
