--- a/shared/latex/python/bigdata/intro.tex
+++ b/shared/latex/python/bigdata/intro.tex
@@ -1,10 +1,12 @@
 \begin{frame}{Introduction}
-  Les données volumineuses posent des problèmes particuliers
+  Les données volumineuses posent des problèmes particuliers, dont
 
   \begin{itemize}
-    \item Stockage impossible sur un seul nœud
-    \item De même pour le calcul
-    \item La programmation ditribuée est délicate
+    \item Le stockage
+    \item Le traitement
+    \item L'exploration
+    \item Le transfert
+    \item …
   \end{itemize}
 
   $\Rightarrow$ Nécessité d'utiliser des outils pertinents
