Add seaborn content
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/dataviz/seaborn.tex
+++ b/shared/latex/python/dataviz/seaborn.tex
@@ -1,11 +1,41 @@
 \begin{frame}{Introduction}
-  
+  Seaborn est une surcouche de matplotlib qui permet la création immédiate des diagrammes courants en stat.
 \end{frame}
 
-\begin{frame}{Principaux outils}
-  
+\begin{frame}{Principaux diagrammes}
+  \bluelink{https://seaborn.pydata.org/examples/index.html}{Galerie seaborn}
+\end{frame}
+
+\begin{frame}{Variable catégorielle — Diagramme de décompte}
+  \V{"img/countplot-nzmog" | image("th", 0.7)}
+\end{frame}
+
+\begin{frame}{Variable numérique — Histogramme}
+  \V{"plt/histogram" | image("th", 0.7)}
+\end{frame}
+
+\begin{frame}{Variables numérique–numérique — Nuage de points}
+  \V{"plt/scatter-plot" | image("th", 0.7)}
+\end{frame}
+
+\begin{frame}{Variables catégorielle–numérique — Diagramme en bâtons}
+  \V{"plt/bar-plot" | image("th", 0.7)}
+\end{frame}
+
+\begin{frame}{Variables catégorielle–numérique — Diagramme en violons}
+  \V{"plt/violin-plot" | image("th", 0.7)}
+\end{frame}
+
+\begin{frame}{Multi-variables — Pairplot}
+  \V{"img/pairplot-nzmog" | image("th", 0.7)}
+\end{frame}
+
+\begin{frame}{Multi-variables numériques — Matrice de corrélation}
+  \V{"plt/corrmat" | image("th", 0.7)}
 \end{frame}
 
 \begin{frame}{Personnalisation}
-  
+  La personnalisation se fait avec l'API matplotlib qui est exposée par seaborn.
+
+  Souvent par un attribut \texttt{ax}.
 \end{frame}
