minor change to contact.tex;add en/ml bait flavor for profind/pda

--- a/shared/latex/contact.tex
+++ b/shared/latex/contact.tex
@@ -2,12 +2,16 @@
 \begin{frame}[standout]
   \frametitle{}
   {\huge
-    \begin{center}
-      \TrainerName
-
-      \TrainerEmail
-
-      \TrainerPhone
+  \begin{center}
+    \TrainerName
+    
+    \TrainerEmail
+  \end{center}
+  }
+  {\huge
+  \V{"img/logos/mlambda" | image("th", 0.45, "en")}
+  \begin{center}
+      \bluelink{https://mlambda.fr/}{https://mlambda.fr/}
     \end{center}
   }
 \end{frame}
