--- a/shared/latex/contact.tex
+++ b/shared/latex/contact.tex
@@ -2,16 +2,14 @@
 \begin{frame}[standout]
   \frametitle{}
   {\huge
-  \begin{center}
-    \TrainerName
-    
-    \TrainerEmail
+    \begin{center}
+      \TrainerName
+
+      \TrainerEmail
+
+      \V{"img/logos/mlambda" | image("th", 0.45, "en")}
+
+      \mlambdalink{https://mlambda.fr/}{https://mlambda.fr/}
   \end{center}
-  }
-  {\huge
-  \V{"img/logos/mlambda" | image("th", 0.45, "en")}
-  \begin{center}
-      \bluelink{https://mlambda.fr/}{https://mlambda.fr/}
-    \end{center}
   }
 \end{frame}
