--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -268,6 +268,18 @@
   }%
 }
 
+\definecolor{mlambdablue}{rgb}{0.388,0.62,0.671}
+
+\newcommand{\mlambdalink}[2]{%
+  \href{%
+    #1%
+  }{%
+    \color{mlambdablue}%
+    \setulcolor{mlambdablue}%
+    \ul{#2}%
+  }%
+}
+
 \newcommand{\vect}[1]{\bm{\mathbf{#1}}}
 
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
