Use english page for english contact slide
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/contact.tex
+++ b/shared/latex/en/contact.tex
@@ -9,7 +9,7 @@
 
       \V{"img/logos/mlambda" | image("th", 0.45, "en")}
 
-      \mlambdalink{https://mlambda.fr/}{https://mlambda.fr/}
+      \mlambdalink{https://mlambda.fr/en/}{https://mlambda.fr/en/}
   \end{center}
   }
 \end{frame}
