Add contact slide to ToC
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/contact.tex
+++ b/shared/latex/en/contact.tex
@@ -1,15 +1,18 @@
+{
+  \AtBeginSection{}
+  \section{Contact}
+  \begin{frame}[standout]
+    \frametitle{}
+    {\huge
+      \begin{center}
+        \TrainerName
 
-\begin{frame}[standout]
-  \frametitle{}
-  {\huge
-    \begin{center}
-      \TrainerName
+        \TrainerEmail
 
-      \TrainerEmail
+        \V{"img/logos/mlambda" | image("th", 0.45, "en")}
 
-      \V{"img/logos/mlambda" | image("th", 0.45, "en")}
-
-      \mlambdalink{https://mlambda.fr/en/}{https://mlambda.fr/en/}
-  \end{center}
-  }
-\end{frame}
+        \mlambdalink{https://mlambda.fr/en/}{https://mlambda.fr/en/}
+    \end{center}
+    }
+  \end{frame}
+}
