latex for tkinter ; update sparks-formation logo

--- a/shared/latex/en/about/formateur.tex
+++ b/shared/latex/en/about/formateur.tex
@@ -6,4 +6,7 @@
     \item[Specialization] \TrainerSpecializationEn
     \item[Training] \TrainerTrainingEn
   \end{description}
+  \begin{center}
+    \V{"img/logos/mlambda" | image("tw", 0.2)}
+  \end{center}
 \end{frame}
