--- a/shared/latex/en/python/databases/sqlite.tex
+++ b/shared/latex/en/python/databases/sqlite.tex
@@ -54,6 +54,10 @@
 
 \end{frame}
 
+\begin{frame}{A Simple Example}
+  \mintedpycode{python/databases/sqlite-full-example}
+\end{frame}
+
 \begin{frame}{Demo SQLite}
   \bluelink{https://codespaces.new/NyxAether/python_sqlite_formation}{Demo}
 \end{frame}
