Qt slides terminées

--- a/shared/latex/en/python/gui/tkinter.tex
+++ b/shared/latex/en/python/gui/tkinter.tex
@@ -33,7 +33,7 @@
 
     \mintedpycode{python/gui/tkinter-frame}
 
-    The parent of the frame is the root.
+    The root is the frame's parent.
 \end{frame}
 
 \begin{frame}{Graphic Widgets}
