--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -28,6 +28,7 @@
 \usepackage{tikz}
 \usepackage{colortbl}
 \usepackage{lcg}
+\usepackage{dirtree}
 \usepackage[french]{babel}
 
 \hypersetup{bookmarksdepth=4}
