correction slide avec only non fonctionnel

--- a/shared/latex/unsupervised/clustering/spectral-clustering.tex
+++ b/shared/latex/unsupervised/clustering/spectral-clustering.tex
@@ -154,17 +154,22 @@
         \begin{itemize}
             \item Le but est de trouver un sous-graphe $G'\subset G$ defini par un vecteur $x$ qui représente l'ensemble des noeuds de $G'$
             \item $G'$ conserve l'ensemble des arêtes possibles entre les noeuds de $G'$
-            \visible<2>{\item Exemple : $x =(1,1,0,1,0,1)$}
         \end{itemize}
     \end{minipage}
     \begin{minipage}{0.49\linewidth}
-        \only<1>{
             \V{"tikz/graph/spectral-clustering-1" | image("tw", 1)}
-        }
-        \only<2>{
+    \end{minipage}
+\end{frame}
+\begin{frame}{Spécification du problème}
+    \begin{minipage}{0.49\linewidth}
+        \begin{itemize}
+            \item Le but est de trouver un sous-graphe $G'\subset G$ defini par un vecteur $x$ qui représente l'ensemble des noeuds de $G'$
+            \item $G'$ conserve l'ensemble des arêtes possibles entre les noeuds de $G'$
+            \item Exemple : $x =(1,1,0,1,0,1)$
+        \end{itemize}
+    \end{minipage}
+    \begin{minipage}{0.49\linewidth}
             \V{"tikz/graph/spectral-clustering-4" | image("tw", 1)}
-        }
-
     \end{minipage}
 \end{frame}
 
