mv data-science/pandas.tex to new data-science/pd section with full blank new tex and TPs; orsys/pnd/target.yml maj

--- a/orsys/pnd/latex/about/description.tex
+++ b/orsys/pnd/latex/about/description.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Description}
-  Formation visant à approfondir l'exploration de Pandas nécessaire à tous projets de data science.
+  Formation visant à approfondir l'exploration de Pandas nécessaire à tout projet de data science.
 \end{frame}
 
 \begin{frame}{Prérequis}
